# advent-of-code

./: README.md
2024/01/: README.md
2024/02/: README.md
2024/02/python/: red_nosed_reports.py
2024/03/: README.md
2024/03/rust/part01/: Cargo.toml
2024/03/rust/part01/src/: main.rs
2024/03/rust/part02/: Cargo.toml
2024/03/rust/part02/src/: main.rs
2024/04/: README.md
2024/04/rust/: Cargo.toml
2024/04/rust/src/: block_service.rs  main.rs  main01.rs  main02.rs
2024/05/: README.md
2024/05/java/: settings.gradle
2024/05/java/app/: build.gradle
2024/06/: README.md
2024/06/reactjs/guard-gallivant/: package-lock.json  package.json
2024/07/: README.md
2024/07/java/: pom.xml
2024/08/: README.md
2024/08/java/: pom.xml
2024/09/: README.md
2024/09/haskell/day09part01/: day09part01.cabal
2024/09/java/: pom.xml
2024/10/: README.md
2024/10/java/: pom.xml
2024/11/: README.md
2024/11/haskell/: aoc2024day11.cabal
2024/11/haskell/app/: Main.hs
2024/12/: README.md
2024/12/day12/: .gitignore  build.gradle.kts  settings.gradle.kts
2024/13/: README.md
2024/13/day13/: build.gradle.kts  settings.gradle.kts
2024/14/: README.md
2024/14/day14/: build.gradle.kts  settings.gradle.kts
2024/14/day14/src/main/kotlin/: Main.kt  (+4 more)
2024/15/: README.md
2024/15/day15/: build.gradle.kts  settings.gradle.kts
2024/16/day16/: build.gradle.kts
2024/17/: README.md
2024/17/day17/: build.gradle.kts
2024/18/: README.md
2024/18/day18/: build.gradle.kts
2024/19/: README.md
2024/19/day19/: build.gradle.kts
2024/20/day20/: build.gradle.kts
(+118 files in other folders)
