cabal-version:      3.0
name:               aoc2024day11
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                       , MemoTrie ^>=0.6.11
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:   GADTs